--- a/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
@@ -128,6 +128,18 @@
       <RepositoryCode>true</RepositoryCode>
       <id>8046bedc-5d9e-4b49-aa0e-00587b18d34a</id>
     </Compile>
+    <Compile Include="TestRecording.cs">
+      <BoundTo>62628395-c73a-443c-b1bd-b6527981b94e</BoundTo>
+      <DependentUpon>TestRecording.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>6eb6a8c1-87a0-4cdf-af2a-b51c94ed5987</id>
+    </Compile>
+    <Compile Include="TestRecording.UserCode.cs">
+      <BoundTo>62628395-c73a-443c-b1bd-b6527981b94e</BoundTo>
+      <DependentUpon>TestRecording.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>3fb1d7f9-4420-44cc-a665-20cda84c8e0e</id>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
@@ -143,6 +155,11 @@
       <id>3b68fc90-8037-4fdc-8275-4f7d991469c4</id>
       <repoid>7e065f7a-a759-472e-9183-5eb5699d7833</repoid>
       <reporootid>0dd6cfa7-ba04-43ea-9088-05ef7ddaa3f1</reporootid>
+    </None>
+    <None Include="TestRecording.rxrec">
+      <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
+      <id>62628395-c73a-443c-b1bd-b6527981b94e</id>
+      <recordtableid>4d2ac770-c85a-44dc-8013-20fb31fae1ed</recordtableid>
     </None>
   </ItemGroup>
   <ItemGroup>
