--- a/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <RanorexTargetsPath>$(MSBuildProgramFiles32)\MSBuild\Ranorex$(RanorexVersion)\Ranorex.MSBuild.Targets</RanorexTargetsPath>
     <projectdefaultrepository>3b68fc90-8037-4fdc-8275-4f7d991469c4</projectdefaultrepository>
+    <StartAction>Project</StartAction>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -122,6 +123,9 @@
     <Compile Include="Program.cs">
       <id>eec7bf1b-84cb-450c-bd85-3ebf5f20d6d3</id>
     </Compile>
+    <Compile Include="RestoreDatabase.cs">
+      <id>1d2315c3-ba1a-4e4a-b93b-706f6915e157</id>
+    </Compile>
     <Compile Include="ShipWorksPerformanceTestSuiteRepository.cs">
       <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
       <DependentUpon>ShipWorksPerformanceTestSuiteRepository.rxrep</DependentUpon>
@@ -157,9 +161,9 @@
       <reporootid>0dd6cfa7-ba04-43ea-9088-05ef7ddaa3f1</reporootid>
     </None>
     <None Include="TestRecording.rxrec">
-      <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
       <id>62628395-c73a-443c-b1bd-b6527981b94e</id>
       <recordtableid>4d2ac770-c85a-44dc-8013-20fb31fae1ed</recordtableid>
+      <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
     </None>
   </ItemGroup>
   <ItemGroup>
