TP#32448: added five existing features.

--- a/Code/ShipWorks.Ranorex.Tests/WebAutomation/ShipWorksHub/ShipWorksHub/ShipWorksHub.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/WebAutomation/ShipWorksHub/ShipWorksHub/ShipWorksHub.csproj
@@ -5,13 +5,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\AddWarehouse.feature.cs" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\FailureLogin.feature.cs" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\Login.feature.cs" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\Logout.feature.cs" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\LogoutURLRedirectVerification.feature.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="74.0.0" />
+    <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.24.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver.MicrosoftDriver" Version="17.17134.0" />
     <PackageReference Include="SpecFlow" Version="3.0.220" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.220" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.0.220" />
+    <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -19,17 +30,53 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="LaunchShipWorksHub.feature.cs">
+    <Compile Update="Features\AddWarehouse.feature.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>LaunchShipWorksHub.feature</DependentUpon>
+      <DependentUpon>AddWarehouse.feature</DependentUpon>
+    </Compile>
+    <Compile Update="Features\FailureLogin.feature.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>FailureLogin.feature</DependentUpon>
+    </Compile>
+    <Compile Update="Features\Login.feature.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Login.feature</DependentUpon>
+    </Compile>
+    <Compile Update="Features\Logout.feature.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Logout.feature</DependentUpon>
+    </Compile>
+    <Compile Update="Features\LogoutURLRedirectVerification.feature.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>LogoutURLRedirectVerification.feature</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowFeatureFiles Update="LaunchShipWorksHub.feature">
+    <SpecFlowFeatureFiles Update="Features\AddWarehouse.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>LaunchShipWorksHub.feature.cs</LastGenOutput>
+      <LastGenOutput>AddWarehouse.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Features\FailureLogin.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>FailureLogin.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Features\Login.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Login.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Features\Logout.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Logout.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+    <SpecFlowFeatureFiles Update="Features\LogoutURLRedirectVerification.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>LogoutURLRedirectVerification.feature.cs</LastGenOutput>
     </SpecFlowFeatureFiles>
   </ItemGroup>
 
