--- a/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
@@ -111,6 +111,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplyProfileTo500Orders.cs">
+      <id>7b6d4893-8790-46dc-a2a6-180ef2735e1a</id>
+    </Compile>
     <Compile Include="AssemblyInfo.cs">
       <id>f3a7aa6b-6a87-463b-9e15-1d4d3cb39acc</id>
     </Compile>
@@ -126,11 +129,20 @@
     <Compile Include="InstallShipWorks.cs">
       <id>919b01c7-fd83-4b45-b496-d84dc6bbd430</id>
     </Compile>
+    <Compile Include="Load500Orders.cs">
+      <id>92fddb98-f683-404b-b60f-1900317a1b24</id>
+    </Compile>
+    <Compile Include="Process500Orders.cs">
+      <id>f9de5849-db2b-4acb-9206-ec39b51374d2</id>
+    </Compile>
     <Compile Include="Program.cs">
       <id>eec7bf1b-84cb-450c-bd85-3ebf5f20d6d3</id>
     </Compile>
     <Compile Include="RestoreDatabase.cs">
       <id>1d2315c3-ba1a-4e4a-b93b-706f6915e157</id>
+    </Compile>
+    <Compile Include="Select500Orders.cs">
+      <id>c4c46165-4f7f-4393-85a0-616211dc02d0</id>
     </Compile>
     <Compile Include="ShipWorksPerformanceTestSuiteRepository.cs">
       <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
@@ -149,6 +161,9 @@
       <DependentUpon>TestRecording.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>3fb1d7f9-4420-44cc-a665-20cda84c8e0e</id>
+    </Compile>
+    <Compile Include="Void500Shipments.cs">
+      <id>adf1e739-589e-4914-b5c5-286ee9956b93</id>
     </Compile>
   </ItemGroup>
   <ItemGroup>
