--- a/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
@@ -111,6 +111,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplyProfileTo100Orders.cs">
+      <id>e9e1d283-3f7c-4994-8c30-7b3a599716de</id>
+    </Compile>
     <Compile Include="ApplyProfileTo500Orders.cs">
       <id>7b6d4893-8790-46dc-a2a6-180ef2735e1a</id>
     </Compile>
@@ -129,10 +132,16 @@
     <Compile Include="InstallShipWorks.cs">
       <id>919b01c7-fd83-4b45-b496-d84dc6bbd430</id>
     </Compile>
+    <Compile Include="Load100Orders.cs">
+      <id>c75ec2fc-49b9-4e92-8e99-a1f4130635ec</id>
+    </Compile>
+    <Compile Include="Load100SROrders.cs">
+      <id>5fdd4420-7c5d-468c-9816-0217fbda0886</id>
+    </Compile>
     <Compile Include="Load500Orders.cs">
       <id>92fddb98-f683-404b-b60f-1900317a1b24</id>
     </Compile>
-    <Compile Include="Process500Orders.cs">
+    <Compile Include="ProcessOrders.cs">
       <id>f9de5849-db2b-4acb-9206-ec39b51374d2</id>
     </Compile>
     <Compile Include="Program.cs">
@@ -141,8 +150,20 @@
     <Compile Include="RestoreDatabase.cs">
       <id>1d2315c3-ba1a-4e4a-b93b-706f6915e157</id>
     </Compile>
-    <Compile Include="Select500Orders.cs">
+    <Compile Include="Select100Orders.cs">
+      <id>8a90d4ec-efd6-4855-951f-a9457a088677</id>
+    </Compile>
+    <Compile Include="Select100OrdersFilter.cs">
+      <id>f20bb6f0-3d9c-463e-902c-cab676603a91</id>
+    </Compile>
+    <Compile Include="Select500OrdersFilter.cs">
+      <id>d19f3bea-d3f8-48b6-9b34-ba0889146c6c</id>
+    </Compile>
+    <Compile Include="SelectAllOrders.cs">
       <id>c4c46165-4f7f-4393-85a0-616211dc02d0</id>
+    </Compile>
+    <Compile Include="SelectShippingRuleFilter.cs">
+      <id>071ebaed-83ad-402a-be59-982edf8c1013</id>
     </Compile>
     <Compile Include="ShipWorksPerformanceTestSuiteRepository.cs">
       <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
@@ -161,6 +182,12 @@
       <DependentUpon>TestRecording.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>3fb1d7f9-4420-44cc-a665-20cda84c8e0e</id>
+    </Compile>
+    <Compile Include="Void100Shipments.cs">
+      <id>cb218048-3981-4104-b172-7a1c203c5379</id>
+    </Compile>
+    <Compile Include="Void100SRShipments.cs">
+      <id>bd851679-71af-4ffb-8ec1-6db74c4b4faa</id>
     </Compile>
     <Compile Include="Void500Shipments.cs">
       <id>adf1e739-589e-4914-b5c5-286ee9956b93</id>
