TP #32651: Add separate utility class for working with HTML Entities

--- a/Code/Interapptive.Shared.Tests/Interapptive.Shared.Tests.csproj
+++ b/Code/Interapptive.Shared.Tests/Interapptive.Shared.Tests.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Utility\ExceptionExtensionsTest.cs" />
     <Compile Include="Utility\StreamUtilityTest.cs" />
     <Compile Include="Utility\TelemetricResultTest.cs" />
+    <Compile Include="Utility\HtmlEntityUtilityTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interapptive.Shared\Interapptive.Shared.csproj">
