--- a/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
+++ b/Code/ShipWorks.Ranorex.Tests/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite/ShipWorksPerformanceTestSuite.csproj
@@ -198,18 +198,6 @@
     <Compile Include="SwitchToOLM.cs">
       <id>3982c5ef-35a8-4199-9e6a-070b0878b6d2</id>
     </Compile>
-    <Compile Include="TestRecording.cs">
-      <BoundTo>62628395-c73a-443c-b1bd-b6527981b94e</BoundTo>
-      <DependentUpon>TestRecording.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>6eb6a8c1-87a0-4cdf-af2a-b51c94ed5987</id>
-    </Compile>
-    <Compile Include="TestRecording.UserCode.cs">
-      <BoundTo>62628395-c73a-443c-b1bd-b6527981b94e</BoundTo>
-      <DependentUpon>TestRecording.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>3fb1d7f9-4420-44cc-a665-20cda84c8e0e</id>
-    </Compile>
     <Compile Include="Void100Shipments.cs">
       <id>cb218048-3981-4104-b172-7a1c203c5379</id>
     </Compile>
@@ -221,6 +209,9 @@
     </Compile>
     <Compile Include="VoidLabel.cs">
       <id>89a3da4d-5630-4d18-98b5-581ce8e4acdb</id>
+    </Compile>
+    <Compile Include="WriteToCSV.cs">
+      <id>8761fe8c-bc98-4e4c-81dc-9bfc122dc84d</id>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -243,11 +234,6 @@
       <id>3b68fc90-8037-4fdc-8275-4f7d991469c4</id>
       <repoid>7e065f7a-a759-472e-9183-5eb5699d7833</repoid>
       <reporootid>0dd6cfa7-ba04-43ea-9088-05ef7ddaa3f1</reporootid>
-    </None>
-    <None Include="TestRecording.rxrec">
-      <id>62628395-c73a-443c-b1bd-b6527981b94e</id>
-      <recordtableid>4d2ac770-c85a-44dc-8013-20fb31fae1ed</recordtableid>
-      <BoundTo>3b68fc90-8037-4fdc-8275-4f7d991469c4</BoundTo>
     </None>
   </ItemGroup>
   <ItemGroup>
