--- a/Code/ShipWorks.Res/ShipWorks.Res.csproj
+++ b/Code/ShipWorks.Res/ShipWorks.Res.csproj
@@ -542,6 +542,7 @@
     <EmbeddedResource Include="Data\Administration\Scripts\Update\6.6\6.6.0.2.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\6.6\6.6.0.4.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\6.6\6.6.0.5.sql" />
+    <Content Include="Data\Administration\Scripts\Update\7.0\7.0.0.0.sql" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\settings.xml" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\template.xsl" />
     <Content Include="Templates\Distribution\Source\Invoices\Blue\invoiceHeaderBlue.jpg" />
@@ -715,7 +716,6 @@
     <EmbeddedResource Include="Templates\Distribution\Source\System\Snippets\FormatAddress\template.xsl" />
     <EmbeddedResource Include="Templates\Distribution\Source\System\Snippets\FormatAddress\settings.xml" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
