--- a/Code/ShipWorks.Res/ShipWorks.Res.csproj
+++ b/Code/ShipWorks.Res/ShipWorks.Res.csproj
@@ -542,7 +542,7 @@
     <EmbeddedResource Include="Data\Administration\Scripts\Update\6.6\6.6.0.2.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\6.6\6.6.0.4.sql" />
     <EmbeddedResource Include="Data\Administration\Scripts\Update\6.6\6.6.0.5.sql" />
-    <Content Include="Data\Administration\Scripts\Update\7.0\7.0.0.0.sql" />
+    <EmbeddedResource Include="Data\Administration\Scripts\Update\7.0\7.0.0.0.sql" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\settings.xml" />
     <Content Include="Templates\Distribution\Source\Emails\Shipment Notification\template.xsl" />
     <Content Include="Templates\Distribution\Source\Invoices\Blue\invoiceHeaderBlue.jpg" />
