TP#32874 create ScanPackItem

--- a/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
+++ b/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
@@ -141,6 +141,7 @@
     <Compile Include="AutoPrintResult.cs" />
     <Compile Include="ApplyProfileShortcutMessageIndicatorPipeline.cs" />
     <Compile Include="MainGridControlShortcutPipeline.cs" />
+    <Compile Include="ScanPack\ScanPackItem.cs" />
     <Compile Include="ToggleAutoPrintPipeline.cs" />
     <Compile Include="VirtualKeyboardPipeline.cs" />
     <Compile Include="ShortcutMessageTelemetryPipeline.cs" />
