TP#32874 create ScanPackItemFactory

--- a/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
+++ b/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
@@ -142,7 +142,9 @@
     <Compile Include="ApplyProfileShortcutMessageIndicatorPipeline.cs" />
     <Compile Include="MainGridControlShortcutPipeline.cs" />
     <Compile Include="ScanPack\IScanPackViewModel.cs" />
+    <Compile Include="ScanPack\IScanPackItemFactory.cs" />
     <Compile Include="ScanPack\ScanPackItem.cs" />
+    <Compile Include="ScanPack\ScanPackItemFactory.cs" />
     <Compile Include="ToggleAutoPrintPipeline.cs" />
     <Compile Include="VirtualKeyboardPipeline.cs" />
     <Compile Include="ShortcutMessageTelemetryPipeline.cs" />
