TP#32874 create ScanPackPipeline

--- a/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
+++ b/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
@@ -143,6 +143,7 @@
     <Compile Include="MainGridControlShortcutPipeline.cs" />
     <Compile Include="ScanPack\IScanPackViewModel.cs" />
     <Compile Include="ScanPack\IScanPackItemFactory.cs" />
+    <Compile Include="ScanPack\SacnPackPipeline.cs" />
     <Compile Include="ScanPack\ScanPackItem.cs" />
     <Compile Include="ScanPack\ScanPackItemFactory.cs" />
     <Compile Include="ToggleAutoPrintPipeline.cs" />
