--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1351,12 +1351,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\XamlNamespaces.cs" />    
-    <Compile Include="Warehouse\DTO\Orders\WarehouseOrder.cs" />    
-    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderCharge.cs" />    
-    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItem.cs" />    
-    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItemAttribute.cs" />    
-    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderPaymentDetail.cs" />    
+    <Compile Include="Properties\XamlNamespaces.cs" />
+    <Compile Include="UI\Controls\IScanPack.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrder.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderCharge.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItem.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItemAttribute.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderPaymentDetail.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseOrderNote.cs" />
     <Compile Include="Warehouse\IWarehouseOrderClient.cs" />
     <Compile Include="Warehouse\IWarehouseOrderFactory.cs" />
