TP#32874: Create ItemsToScanControl, PackedControl, ScanControl, ScanPackItemControl. Add MaterialDesignIconLicense to output folder. Add OpenBox and ImagePlaceholder material icons.

--- a/Code/ShipWorks.Executable/ShipWorks.csproj
+++ b/Code/ShipWorks.Executable/ShipWorks.csproj
@@ -316,6 +316,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Content Include="MaterialDesignIconLicense.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="SingleScanPanels.swe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
