TP#32874 add new tab for Scan and Pack to mainform

--- a/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
+++ b/Code/ShipWorks.SingleScan/ShipWorks.SingleScan.csproj
@@ -146,6 +146,7 @@
     <Compile Include="ScanPack\SacnPackPipeline.cs" />
     <Compile Include="ScanPack\ScanPackItem.cs" />
     <Compile Include="ScanPack\ScanPackItemFactory.cs" />
+    <Compile Include="ScanPack\ScanPackViewModel.cs" />
     <Compile Include="ToggleAutoPrintPipeline.cs" />
     <Compile Include="VirtualKeyboardPipeline.cs" />
     <Compile Include="ShortcutMessageTelemetryPipeline.cs" />
