TP#32874: Create ScanPackState. Use ScanPackState in ScanPackViewModel to stop listening for orders after an order is scanned.  Use ScanPackState in ScanControl to display the appropriate icon for the current state.

--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -359,6 +359,7 @@
     </Compile>
     <Compile Include="ScanPack\ScanPackItemFactory.cs" />
     <Compile Include="ScanPack\ScanPackPipeline.cs" />
+    <Compile Include="ScanPack\ScanPackState.cs" />
     <Compile Include="ScanPack\ScanPackViewModel.cs" />
     <Compile Include="ShipmentModelPipelines\CreateLabelShortcutPipeline.cs" />
     <Compile Include="OrderLookupModule.cs" />
