TP#32874 Load order in shipping tab when it is scanned in scan and pick tab and visa versa

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1104,6 +1104,7 @@
     <Compile Include="Filters\Search\ISearchDefinitionProviderFactory.cs" />
     <Compile Include="OrderLookup\OrderClearReason.cs" />
     <Compile Include="OrderLookup\OrderLookupClearOrderMessage.cs" />
+    <Compile Include="OrderLookup\OrderLookupLoadOrderMessage.cs" />
     <Compile Include="OrderLookup\OrderLookupSearchMessage.cs" />
     <Compile Include="OrderLookup\ShipmentModelPipelines\IOrderLookupShipmentModelPipeline.cs" />
     <Compile Include="Products\Export\IProductExcelWriter.cs" />
