Display import errors from the Hub

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1352,6 +1352,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\XamlNamespaces.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseGetOrdersResponse.cs" />
+    <Compile Include="Warehouse\DTO\Orders\WarehouseImportDetails.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseOrder.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseOrderCharge.cs" />
     <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItem.cs" />
